--- a/src/Server.UI/App.razor
+++ b/src/Server.UI/App.razor
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet"/>
     <link href="@Assets["css/app.css"]" rel="stylesheet"/>
+    <link href="@Assets["css/escalation-toasts.css"]" rel="stylesheet"/>
     <HeadOutlet @rendermode="RenderModeForPage"/>
     <ImportMap />
     <meta name="xsrf-token" content="@tokens.RequestToken" />
@@ -148,6 +149,7 @@
         })();
     </script>
     <script src="@Assets["js/boot.js"]"></script>
+    <script src="@Assets["js/escalation-toast-gestures.js"]"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js" integrity="sha512-CNgIRecGo7nphbeZ04Sc13ka07paqdeTu0WR1IM4kNcpmBAUSHSQX0FslNhTDadL4O5SAGapGt4FodqL8My0mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
